# ExperimentalRoboticsLab-Assignment-3

./: .buildinfo  README-sphinx.html  README.md  commit.sh  conf.py  doxygen_config  genindex.html  index.html  index.rst  py-modindex.html  reload_docs.sh  setup-docs.sh  setup-moveit.sh  sphinx_build_log.txt
_build/doctrees/: README-sphinx.doctree  README.doctree  environment.pickle  index.doctree
_build/html/: .buildinfo  README-sphinx.html  README.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_build/xml/: __cassert_8h.xml  __docs_2test-the-project_8md_8txt.xml  __docs_2twist-keyboard_8md_8txt.xml  __prefix_8h.xml  __uml_2arch_8md.xml  __uml_2arch_8md_8txt.xml  _armor_cluedo_01-_01001_01-_01_working_01on_01_individuals-example.xml  _armor_cluedo_01-_01002_01-_01_working_01with_01properties-example.xml  _armor_cluedo_01-_01003_01-_01_reasoning_01_workflow-example.xml  _armor_tools_01-_01001_01-_01_essential_01usage_01of_01_armor_tools-example.xml  _armor_tools_01-_01002_01-_01_the_01quickest_01way_01to_01use_01_armor_tools-example.xml  _n_o_2catkin-notes_8md_8txt.xml  _n_o_2sphinx-yaml_8md_8txt.xml  _n_o_2test-armor_8rst_8txt.xml  _n_o_2wall-follow_8md_8txt.xml  _r_e_a_d_m_e-sphinx_8md.xml  _r_e_a_d_m_e_8md.xml  _r_e_a_d_m_e_8md_8txt.xml  _r_e_a_d_m_e_8rst_8txt.xml  action__collect__hint_8rst_8txt.xml  action__name_8cpp.xml  action__name_8h.xml  action__name__node_8cpp.xml  android_8h.xml  arch_8md.xml  arch_8md_8txt.xml  armor-cluedo_8rst_8txt.xml  armor-commands_8md.xml  armor-commands_8md_8txt.xml  armor-how-to-run_8md.xml  armor-how-to-run_8md_8txt.xml  armor-how-to-use_8md.xml  armor-how-to-use_8md_8txt.xml  armor-interface-class-diagram_8md.xml  armor-interface-class-diagram_8md_8txt.xml  armor-old-schematics_8md.xml  armor-old-schematics_8md_8txt.xml  armor-tools_8rst_8txt.xml  armor-uml_8md.xml  armor-uml_8md_8txt.xml  (+694 more)
_docs/: cpp-docs-template.md  dev-log-rcl3.html  dev-log-rcl3.md  dev-log.md  mapping.md  project-setup.rst  rest-directives.html  run-the-project.html  run-the-project.md  twist-keyboard.md
_docs/NO/: catkin-notes.md  give_me_cum_laude.sh  sphinx-yaml.html
_examples/: examples-index.md
_ext/: plant-uml-reference.html
_ext/examples/: example.txt  example2.rst
_modules/: aruco_decode.html  head_orientation.html  index.html  move_base_nav.html  rosplan_pipeline_manager.html  rosplan_simulated_motion_system.html
_modules/cv_bridge/: core.html
_sources/: README-sphinx.md.txt  index.rst.txt
_sources/_docs/: dev-log-rcl3.md.txt  how-to-setup-doxy-sphinx-ws.md.txt  project-setup.rst.txt  rest-directives.md.txt  run-the-project.md.txt
_sources/robocluedo_mission_manager/: index.rst.txt
_sources/robocluedo_vision/: index.rst.txt
_templates/: index-package  uml-md  uml-rst
_uml/: arch.md
robocluedo_armor/: CMakeLists.txt  index.html  package.xml
robocluedo_armor/_code_reference/: armor-cluedo.html  armor-tools.html  armor-tools.rst
robocluedo_armor/_docs/: armor-commands.md  armor-how-to-run.html  armor-how-to-use.html
robocluedo_armor/_examples/: example_armor_cluedo_1.cpp  example_armor_cluedo_2.cpp  example_armor_cluedo_3.cpp  example_armor_tools_1.cpp  example_armor_tools_2.cpp  examples_tools.html
robocluedo_armor/_uml/: armor-uml.html
robocluedo_armor/config/: parameters.launch
robocluedo_armor/launch/: run.launch
robocluedo_armor/src/: cluedo_armor_interface.cpp
robocluedo_armor_msgs/: CMakeLists.txt  index.html  index.rst  package.xml
robocluedo_armor_msgs/msg/: Hypothesis.msg
robocluedo_armor_msgs/srv/: AddHint.srv  DiscardHypothesis.srv  (+1 more)
robocluedo_dependencies/: .gitignore
robocluedo_mission_manager/: CMakeLists.txt  index.html  package.xml
robocluedo_module_testing/: CMakeLists.txt  index.html  index.rst  package.xml
robocluedo_movement_controller/: CMakeLists.txt  index.html  index.rst  package.xml
robocluedo_movement_controller_msgs/: CMakeLists.txt  package.xml
robocluedo_robot/: .setup_assistant  CMakeLists.txt  package.xml
robocluedo_robot_hunter/: .setup_assistant  CMakeLists.txt  package.xml
robocluedo_rosplan/: CMakeLists.txt  index.rst  package.xml
robocluedo_rosplan/_code_reference/: collect.rst  feedback_manager.html  feedback_manager.rst  kb_interface.rst  kb_tools.rst  move_to.rst  move_to_center.rst  replan.rst
robocluedo_rosplan/_docs/: new-robocluedo.html  new-robocluedo.md  pddl-and-rosplan.html  pddl-and-rosplan.md
robocluedo_rosplan/_uml/: rosplan-arch.md  rosplan-kb.md
robocluedo_rosplan/_uml/NO/: rosplan-pipeline.html
robocluedo_rosplan/data/: OUT.pddl  plan.pddl
robocluedo_rosplan/include/knowledge_base_tools/: feedback_manager.h  kb_tools.h
robocluedo_rosplan/include/robocluedo_rosplan_actions/: action_name.h  collect_hint.h  move_to.h  move_to_center.h  replan.h
robocluedo_rosplan/launch/: load_rosplan.launch  run.launch
robocluedo_rosplan/pddl/blocksworld/: blocks_domain.pddl  blocks_problem.pddl  blocksworld.html  blocksworld.rst
robocluedo_rosplan/pddl/robocluedo/: robocluedo_problem.pddl
robocluedo_rosplan/pddl/robocluedo_3/: robocluedo_domain.pddl  robocluedo_problem.pddl
robocluedo_rosplan/pddl/robocluedo_old/: parse_robocluedo.sh  robocluedo_domain.pddl  robocluedo_problem.pddl  solve_contingentff.sh  solve_metric_ff.sh  solve_popf.sh
robocluedo_rosplan/pddl/simpletest/: parse_simple.sh  popf_plan.pddl  simple_domain.pddl  simple_problem.pddl  simpletest.html  simpletest.md  solve_popf.sh
robocluedo_rosplan/scripts/: rosplan_pipeline_manager.py
robocluedo_rosplan/src/: kb_interface.cpp
robocluedo_rosplan/src/knowledge_base_tools/: feedback_manager.cpp  kb_tools.cpp
robocluedo_rosplan/src/robocluedo_rosplan_actions/: collect_hint.cpp  collect_hint_node.cpp  move_to.cpp  move_to_center.cpp  move_to_center_node.cpp  move_to_node.cpp  replan.cpp  replan_node.cpp
robocluedo_rosplan/src/robocluedo_rosplan_actions/action_name/: action_name.cpp  action_name_node.cpp
robocluedo_rosplan_msgs/: CMakeLists.txt  package.xml
robocluedo_vision/: CMakeLists.txt  index.rst  package.xml
(+533 files in other folders)
